Added retrieveBeatmap and retrieveBeatmapSet