@@ -7,9 +7,7 @@ import org.jetbrains.annotations.NotNull;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.util.Collections;
-import java.util.Iterator;
-import java.util.List;
+import java.util.*;
 
 public record BeatmapSetImpl(List<Beatmap> beatmaps,
 
@@ -40,28 +38,53 @@ public record BeatmapSetImpl(List<Beatmap> beatmaps,
 ) implements BeatmapSet {
     private static final Logger logger = LoggerFactory.getLogger(BeatmapSetImpl.class);
 
-    public BeatmapSetImpl(@NotNull List<? extends Beatmap> beatmaps) {
-        this(Collections.unmodifiableList(beatmaps), null, null, null,
-                null, null, 0, null,
-                null, null, 0, 0,
-                null, null, null, 0,
-                0);
+    @NotNull
+    @Contract(" -> new")
+    public static BeatmapSet empty() {
+        return new BeatmapSetImpl();
     }
 
-    public BeatmapSetImpl(@NotNull Beatmap... beatmaps) {
-        this(List.of(beatmaps), isNonEmptyVarArg(beatmaps));
+    @NotNull
+    @Contract("_ -> new")
+    public static BeatmapSet of(@NotNull Beatmap beatmap) {
+        return of(Collections.singletonList(beatmap));
     }
 
-    @Contract(pure = true)
-    private static Beatmap isNonEmptyVarArg(Beatmap @NotNull ... beatmaps) {
-        if (beatmaps.length == 0) {
-            throw new IllegalArgumentException("Beatmap array must not be empty");
+    @NotNull
+    @Contract("_ -> new")
+    public static BeatmapSet of(@NotNull List<? extends Beatmap> beatmaps) {
+        if (beatmaps.isEmpty()) {
+            throw new IndexOutOfBoundsException("Beatmap list is empty");
         }
 
-        return beatmaps[0];
+        beatmaps.forEach(beatmap -> {
+            Objects.requireNonNull(beatmap, "All elements in the Beatmap list must NOT be null");
+        });
+
+        Beatmap beatmap = beatmaps.get(0);
+
+        return new BeatmapSetImpl(beatmaps, beatmap);
     }
 
-    public BeatmapSetImpl(@NotNull List<? extends Beatmap> beatmaps, @NotNull Beatmap beatmap) {
+    @NotNull
+    @Contract("_, _ -> new")
+    public static BeatmapSet merge(@NotNull BeatmapSet beatmapSet1, @NotNull BeatmapSet beatmapSet2) {
+        List<Beatmap> beatmaps = new ArrayList<>(beatmapSet1.beatmaps());
+        beatmaps.addAll(beatmapSet2.beatmaps());
+
+        return of(beatmaps);
+    }
+
+    private BeatmapSetImpl() {
+        this(null, null, null,
+                null, null,
+                null, 0L, null,
+                null, null, 0,
+                0, null, null,
+                null, 0, 0.0D);
+    }
+
+    private BeatmapSetImpl(@NotNull List<? extends Beatmap> beatmaps, @NotNull Beatmap beatmap) {
         this(Collections.unmodifiableList(beatmaps), beatmap.approved(), beatmap.submitDateString(),
                 beatmap.approvedDateString(), beatmap.lastUpdateString(),
                 beatmap.artist(), beatmap.beatmapSetId(), beatmap.creatorName(),
